--- a/src/core/SportsStore.Core.Application/SportsStore.Core.Application.csproj
+++ b/src/core/SportsStore.Core.Application/SportsStore.Core.Application.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SportsStore.Core.Domain\SportsStore.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
