Tests for the Core Application

--- a/tests/SportsStore.Core.Application.Tests/SportsStore.Core.Application.Tests.csproj
+++ b/tests/SportsStore.Core.Application.Tests/SportsStore.Core.Application.Tests.csproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\core\SportsStore.Core.Application\SportsStore.Core.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
