--- a/src/infrastructure/SportsStore.Infrastructure.Persistence/SportsStore.Infrastructure.Persistence.csproj
+++ b/src/infrastructure/SportsStore.Infrastructure.Persistence/SportsStore.Infrastructure.Persistence.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
