Infrastructure Persistence. Repository Implementations
With PostgreSQL

--- a/src/infrastructure/SportsStore.Infrastructure.Persistence/SportsStore.Infrastructure.Persistence.csproj
+++ b/src/infrastructure/SportsStore.Infrastructure.Persistence/SportsStore.Infrastructure.Persistence.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\core\SportsStore.Core.Application\SportsStore.Core.Application.csproj" />
+    <ProjectReference Include="..\..\core\SportsStore.Core.Domain\SportsStore.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
