API Project. Configuration and Controllers

--- a/src/api/SportsStore.Api/appsettings.json
+++ b/src/api/SportsStore.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Host=localhost;Database=SportsStoreDB;Username=postgres;Password=myvGUN-DUCxUj-xUTte9"
+  }
 }
