--- a/src/api/SportsStore.Api/SportsStore.Api.csproj
+++ b/src/api/SportsStore.Api/SportsStore.Api.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\core\SportsStore.Core.Application\SportsStore.Core.Application.csproj" />
+    <ProjectReference Include="..\..\infrastructure\SportsStore.Infrastructure.Persistence\SportsStore.Infrastructure.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
