MVC Client. Consume API and List Products

--- a/src/ui/SportsStore.MvcClient/appsettings.json
+++ b/src/ui/SportsStore.MvcClient/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "Backend": {
-    "UriBase": "https://localhost:7200/"
+    "UriBase": "https://localhost:7200"
   }
 }
